src/test/deca/avecObjet/valid/call_method_no_params.deca
// Description :
//    Appel d'une méthode sans paramètre.
//
// Resultats :
//    ok

class A {
    void m() {
        println("ok");
    }
}

{
    A a = new A();
    a.m();
}

