src/test/deca/avecObjet/invalid/is_instance_of_rvalue.deca
class A {}

{
    A a = new A();
    if (a instanceof boolean) { // ERREUR
        println("erreur");
    }
}